manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vtuber-calendar-api
  namespace: yolo
  labels:
    app: vtuber-calendar-api
spec:
  replicas: 2
  template:
    metadata:
      name: vtuber-calendar-api
      labels:
        app: vtuber-calendar-api
    spec:
      containers:
        - name: vtuber-calendar-api
          image: registry.cn-hangzhou.aliyuncs.com/incubator4/vtuber-calendar
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: vtuber-calendar-api
