manifests/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vtuber-calendar-web
  labels:
    app: vtuber-calendar-web
spec:
  replicas: 2
  template:
    metadata:
      name: vtuber-calendar-web
      labels:
        app: vtuber-calendar-web
    spec:
      containers:
        - name: vtuber-calendar-web
          image: registry.cn-hangzhou.aliyuncs.com/incubator4/vtuber-calendar
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: vtuber-calendar-web
